# Agent-teacher

./: .gitignore  README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml  webpack.config.js
ai/: settings.py  urls.py  utils.py
lesson_plan/: apps.py  forms.py  models.py  urls.py  views.py
lesson_plan/migrations/: 0001_initial.py
lesson_plan/templatetags/: custom_tags.py
static/js/: index.js
templates/: base.html
templates/lesson_plan/: create_plan.html  form.html  plan_created.html
