[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Mwapsam <mwapsam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
reportlab = "^4.4.1"
django-webpack-loader = "^3.2.0"
ollama = "^0.4.9"
markdown = "^3.8"
jsonschema = "^4.24.0"
bleach = "^6.2.0"
json-repair = "^0.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
